--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -244,7 +244,7 @@ Our results are quite similar for each domain. Even the size of the training set
 
 Our method presented in this paper is a surrogate-model based combined learner and optimizer for parameter tuning. We demonstrated that our algorithm is capable of improving the quality of the DaE algorithm considerably even with only a few iterations. An appropriate number of iterations, like 1000 shall be carried out to demonstrate the capability of the algorithm. We also demonstrated that some of this quality-improvement can be incorporated into an ANN-model, which is also able to generalize excellently to an independent test-set.
 
-Naturally, our algorithm also has some parameters, which can be tuned again. The parameters of any algorithm can be tuned by another algorithm and that may improve the results, but there is no ultimate algorithm. The bad news here is that the computing capacity needed is exploding. Good news is that in each step in the hierarchy an improvement can be made, moreover, the possible improvements become smaller and smaller, thus practically we can stop at some point. 
+Naturally, our algorithm also has some parameters, which can be tuned again. Parameter tuning in this respect is similar to the question of the final parameters of an ultimate theory of the Universe: one can always try to reduce one theory to another with possibly less parameters. But the infinite regress can not be stopped: there will always be some ultimate constants. Similarly, the parameters of any algorithm can be tuned by another algorithm and that may improve the results. But there is no ultimate algorithm. The bad news here is that the computing capacity needed is exploding. Good news is that in each step in the hierarchy an improvement can be made, moreover, the possible improvements become smaller and smaller, thus practically we can stop at some point. 
 
 
 \section{Future Work}
