--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -39,7 +39,7 @@ for Evolutionary AI Planning -- $Revision: 4461$}
 \date{February 9, 2011}
 \maketitle
 \begin{abstract}
-\noindent Learn-and-Optimize (LaO) is a generic surrogate-model based method for parameter tuning combining learning and optimizing. In this paper LaO is used to tune Divide-and-Evolve (DaE), an Evolutionary Algorithm for AI Planning. The LaO framework makes it possible to learn the relation between some features describing a given instance and the optimal parameters for this instance, thus making it possible to extrapolate this relation to unknown instances in the same domain, or even to instance in a new domain. Moreover, the learned model is already used as a surrogate-model to accelerate the search for the optimal parameters. It hence ebcomes possible to solve intra-domain and extra-domain tuning and generalization in a single framework. The proposed implementatin of LaO uses an Artificial Neural Network for learning the mapping between features and optimal parameters, and the Covariance Matrix Adaptation Evolution Strategy for optimization. Reuslts demonstrate that LaO is capable of improving the quality of the DaE results even with only a few iterations. THe main limitation of the DAE case-study is the limited amount of meaningful features that are available to describe the instances. However, the learned model reaches almost the same performance on the test instances, which means that it is capable of generalization, at least in a single-domain setting. 
+\noindent Learn-and-Optimize (LaO) is a generic surrogate-model based method for parameter tuning combining learning and optimizing. In this paper LaO is used to tune Divide-and-Evolve (DaE), an Evolutionary Algorithm for AI Planning. The LaO framework makes it possible to learn the relation between some features describing a given instance and the optimal parameters for this instance, thus making it possible to extrapolate this relation to unknown instances in the same domain, or even to instance in a new domain. Moreover, the learned model is already used as a surrogate-model to accelerate the search for the optimal parameters. It hence comes possible to solve intra-domain and extra-domain tuning and generalization in a single framework. The proposed implementatin of LaO uses an Artificial Neural Network for learning the mapping between features and optimal parameters, and the Covariance Matrix Adaptation Evolution Strategy for optimization. Reuslts demonstrate that LaO is capable of improving the quality of the DaE results even with only a few iterations. THe main limitation of the DAE case-study is the limited amount of meaningful features that are available to describe the instances. However, the learned model reaches almost the same performance on the test instances, which means that it is capable of generalization, at least in a single-domain setting. 
 
 \end{abstract}
 
