Before going home ...

--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -7,7 +7,7 @@
 
 % Please leave SVN version number $Revision$
 % Remember to enter the SVN command 
-%      svn propset svn:keywords "Revision" gecco11.tex
+%      svn propset svn:keywords "Revision" thisFile.tex
 
 
 \begin{document}
