Blinding the authors

--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -70,31 +70,34 @@
 %\title{A Multicore Implementation of the Individual Evaluation in the Divide-and-Evolve Planner}
 \title{Parallel Divide-and-Evolve: Experiments with OpenMP on a Multicore Machine}
 
-\numberofauthors{2} % 4 is a bug!
+%\numberofauthors{2} % 4 is a bug!
+%
+%\author{
+%\alignauthor
+%Caner Candan\\
+%       \affaddr{Thales Research \& Technology}\\
+%       \affaddr{Palaiseau, France}\\
+%       \email{caner.candan@thalesgroup.com}
+%\alignauthor
+%Johann Dr{\'e}o\\
+%       \affaddr{Thales Research \& Technology}\\
+%       \affaddr{Palaiseau, France}\\
+%       \email{johann.dreo@thalesgroup.com}
+%\and
+%\alignauthor
+%Pierre Sav{\'e}ant\\
+%       \affaddr{Thales Research \& Technology}\\
+%       \affaddr{Palaiseau, France}\\
+%       \email{pierre.saveant@thalesgroup.com}
+%\alignauthor
+%Vincent Vidal\\
+%       \affaddr{ONERA -- DCSD}\\
+%       \affaddr{Toulouse, France}\\
+%       \email{vincent.vidal@onera.fr}
+%}
 
-\author{
-\alignauthor
-Caner Candan\\
-       \affaddr{Thales Research \& Technology}\\
-       \affaddr{Palaiseau, France}\\
-       \email{caner.candan@thalesgroup.com}
-\alignauthor
-Johann Dr{\'e}o\\
-       \affaddr{Thales Research \& Technology}\\
-       \affaddr{Palaiseau, France}\\
-       \email{johann.dreo@thalesgroup.com}
-\and
-\alignauthor
-Pierre Sav{\'e}ant\\
-       \affaddr{Thales Research \& Technology}\\
-       \affaddr{Palaiseau, France}\\
-       \email{pierre.saveant@thalesgroup.com}
-\alignauthor
-Vincent Vidal\\
-       \affaddr{ONERA -- DCSD}\\
-       \affaddr{Toulouse, France}\\
-       \email{vincent.vidal@onera.fr}
-}
+\numberofauthors{1}
+\author{This work is submitted to the {\large \em Parallel Evolutionary Systems} track of GECCO'2011}
 
 \maketitle
 \begin{abstract}
