--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -39,7 +39,7 @@ for Evolutionary AI Planning -- $Revision: 4461$}
 \date{February 9, 2011}
 \maketitle
 \begin{abstract}
-\noindent Learn-and-Optimize (LaO) is a generic surrogate-model based method for parameter tuning combining learning and optimizing. In this paper LaO is used to tune Divide-and-Evolve (DaE), an Evolutionary Algorithm for AI Planning. The LaO framework makes it possible to learn the relation between some features describing a given instance and the optimal parameters for this instance, thus making it possible to extrapolate this relation to unknown instances in the same domain, or even to instance in a new domain. Moreover, the learned model is already used as a surrogate-model to accelerate the search for the optimal parameters. It hence comes possible to solve intra-domain and extra-domain tuning and generalization in a single framework. The proposed implementatin of LaO uses an Artificial Neural Network for learning the mapping between features and optimal parameters, and the Covariance Matrix Adaptation Evolution Strategy for optimization. Results demonstrate that LaO is capable of improving the quality of the DaE results even with only a few iterations. THe main limitation of the DAE case-study is the limited amount of meaningful features that are available to describe the instances. However, the learned model reaches almost the same performance on the test instances, which means that it is capable of generalization, at least in a single-domain setting. 
+\noindent Learn-and-Optimize (LaO) is a generic surrogate-model based method for parameter tuning combining learning and optimizing. In this paper LaO is used to tune Divide-and-Evolve (DaE), an Evolutionary Algorithm for AI Planning. The LaO framework makes it possible to learn the relation between some features describing a given instance and the optimal parameters for this instance, thus making it possible to extrapolate this relation to unknown instances in the same domain, or even to instance in a new domain. Moreover, the learned model is already used as a surrogate-model to accelerate the search for the optimal parameters. It hence comes possible to solve intra-domain and extra-domain tuning and generalization in a single framework. The proposed implementation of LaO uses an Artificial Neural Network for learning the mapping between features and optimal parameters, and the Covariance Matrix Adaptation Evolution Strategy for optimization. Results demonstrate that LaO is capable of improving the quality of the DaE results even with only a few iterations. The main limitation of the DAE case-study is the limited amount of meaningful features that are available to describe the instances. However, the learned model reaches almost the same performance on the test instances, which means that it is capable of generalization, at least in a single-domain setting. 
 
 \end{abstract}
 
@@ -120,7 +120,7 @@ The main obstacle here is in the concept of finding a single optimal parameter-s
 
 Suppose we have n features and m parameters. For the sake of simplicity and generality, both the fitness value, the features and the parameters are considered as real values. Parameter tuning is the optimization (in our case minimization) of the fitness function \begin{math}f:\mathbf{R}^m\to \mathbf{R} \end{math}, which function is different for each instance. In our case f is the expected value off the stochastic algorithm DaE executed with parameter \begin{math} p \in \mathbf{R}^m \end{math}. The optimal parameter is defined by \begin{math} p_{opt}=argmin_p\{f(p)\} \end{math}. For each instance there is a set \begin{math} F \in \mathbf{R}^n \end{math}, the features of that instance and the corresponding domain. 
 
-Here we have to relations: each planning instance has features and it has an optimal parameter-set. In order to be able to generalize, we have to get rid of the instance and collapse the two relations into one relation between feature-space and parameter-space. But can we combine these relations into one?There is a possibility that different instances have the same features, which may occur if the feature-set is not rich enough. If for two instances the features are the same, there is a chance that there is no big difference in the optimal parameter. Or to be more precise, there is no big difference in fitness when using one or the other optimal parameter, or maybe something "in-between". We do not know how serious problem this unambiguity could consist. We hope that a learning algorithm would tolerate this and "cut through" the unambiguity. For the sake of simplicity we consider as if there existed an unambiguous mapping from the feature space to the optimal parameter space. 
+Here we have to relations: each planning instance has features and it has an optimal parameter-set. In order to be able to generalize, we have to get rid of the instance and collapse the two relations into one relation between feature-space and parameter-space. But can we combine these relations into one? There is a possibility that different instances have the same features, which may occur if the feature-set is not rich enough. If for two instances the features are the same, there is a chance that there is no big difference in the optimal parameter. Or to be more precise, there is no big difference in fitness when using one or the other optimal parameter, or maybe something "in-between". We do not know how serious problem this unambiguity could consist. We hope that a learning algorithm would tolerate this and "cut through" the unambiguity. For the sake of simplicity we consider as if there existed an unambiguous mapping from the feature space to the optimal parameter space. 
 
 \begin{equation} p_F: \mathbf{R}^n \to \mathbf{R}^m, p_F(F)=p_{opt} \end{equation}.	
 
@@ -140,7 +140,7 @@ Our choice for supervised learning method was a multilayer Feed-Forward Artifici
 
 The only open decision is which optimizer to use for parameter tuning. Since we have several instances to run, we can only afford a simple optimizer, therefore simply a Covariance Matrix Adaptation Evolution Strategy was chosen, specifically, a (1+1)-CMA-ES (in short, CMA-ES, see \cite{hansen2001ecj}). We started CMA-ES with a known set of good default parameters, taken from \cite{BibGECCO:2010}.
 
-There is one element added to a conventional CMA-ES, and this is gene-transfer between instances. We have one (1+1)-CMA-ES running for each instance, because we can not afford to use a larger population for a single instance. However, the (1+1)-CMA-ES instances of all the instances form a set of individuals. Crossover between individuals is usually not used in ES, however, in our case the the set of individuals does not resemble to a population, but to a set of species. We have to assume that the optimum for the instances are different: they are in different "niche"-s of the parameter tuning "biosphere". However, we also may assume that a good chromosome of one instance may at least help another instance. Thus it may be used as a hint in the optimization. Therefore random Genetransferer was used in our algorithm. When the Genetransferer is requested for a hint for one instance, it returns with uniform random distribution the so-far best parameter of a different instance. Naturally, the default parameters are not tried twice. There is another benefit from gene-transfer, it may smooth out the unambiguities between instances: we increase the probability for instances with the same features to test the same parameters, and thus the possibility to find out that the same parameters are appropriate for the same features.
+There is one element added to a conventional CMA-ES, and this is gene-transfer between instances. We have one (1+1)-CMA-ES running for each instance, because we can not afford to use a larger population for a single instance. However, the (1+1)-CMA-ES instances of all the instances form a set of individuals. Crossover between individuals is usually not used in ES, however, in our case the set of individuals does not resemble to a population, but to a set of species. We have to assume that the optimum for the instances are different: they are in different "niche"-s of the parameter tuning "biosphere". However, we also may assume that a good chromosome of one instance may at least help another instance. Thus it may be used as a hint in the optimization. Therefore random gene-transfer was used in our algorithm. When the Genetransferer is requested for a hint for one instance, it returns with uniform random distribution the so-far best parameter of a different instance. Naturally, the default parameters are not tried twice. There is another benefit from gene-transfer, it may smooth out the unambiguities between instances: we increase the probability for instances with the same features to test the same parameters, and thus the possibility to find out that the same parameters are appropriate for the same features.
 
 Using the ANN and the Genetransferer as external hints in addition to the CMA-ES corrupts somewhat the later one. The CMA-ES shall be informed about these external hints, if they improve the fitness-function. These external hints are handled as if they were the hint of the CMA-ES algorithm, i.e. we request a hint from the CMA-ES and change it to be the value of the external hint as if by chance that was the hint of CMA-ES. This way corruption is minimized. The global step size is updated with true or false, depending on the improvement or lack of improvement, covariance matrix is updated only in the later case.
 
@@ -201,7 +201,7 @@ Number of offsprings& 100& 2000& 700 \\
 \end{table*} 
 
 
-There is one additional technical problem with CMA-ES, this is that each parameter is restricted to an interval. This seems reasonable and makes our algorithm more stable. The parameters are actually normalized linearly to the [0,1] interval. For the boundary problem we applied a simple version of the box constraint handling technique described in \cite{hansen2009tec}. Our penalty term was simply \begin{math}||x^{feas}-x|| \end{math}, where \begin{math}x^{feas}\end{math} is the closest value in the box. Moreover, only \begin{math}x^{feas}\end{math} was recorded as a feasible solution to pass to the ANN. Note that the Genetransferer and the ANN itself can not give hints outside of the box. In order to not to compromise too much CMA-ES several iterations of this were carried out for one hint of the ANN and one gene-transfer.
+There is one additional technical problem with CMA-ES, this is that each parameter is restricted to an interval. This seems reasonable and makes our algorithm more stable. The parameters are actually normalized linearly to the [0,1] interval. For the boundary problem we applied a simple version of the box constraint handling technique described in \cite{hansen2009tec}. Our penalty term was simply \begin{math}||p^{feas}-p|| \end{math}, where \begin{math}p^{feas}\end{math} is the closest value in the box. Moreover, only \begin{math}p^{feas}\end{math} was recorded as a feasible solution to pass to the ANN. Note that the Genetransferer and the ANN itself can not give hints outside of the box. In order to not to compromise too much CMA-ES several iterations of this were carried out for one hint of the ANN and one gene-transfer.
 
 Our realization of our LaO algorithm uses the Shark library (\cite{shark08}) for CMA-ES and the FANN library for ANN (\cite{nissen}). To evaluate each parameter-setting with each instance, we use a computer-cluster with approximately 60 computers, most of them have 4 cores, but some have 8. The cluster is used by many researchers, therefore our algorithm contains a scheduler to use the free capacity on this cluster.
 
