--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -12,7 +12,7 @@
 
 \begin{document}
 
-\title{Instance-based Parameter Tuning\\
+\title{Instance-Based Parameter Tuning\\
 for Evolutionary AI Planning -- $Revision: 4461$}
 
 \numberofauthors{1}
